Add contract resource.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -175,6 +175,10 @@ en:
     show:
       title: "Dashboard"
 
+  contracts:
+    index:
+      title: "Contracts"
+
   payments:
     success: "Thanks for subscribing!"
     show:
